fixed spacing issue on skills page

--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,7 @@
   
 }
 #skills {
-  height: 80vh;
+  height: 90vh;
   background-image: url("https://imgur.com/x805nff.png");
   background-size: cover;
 }
